--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       14/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 98 points<br>
+Unlocked       14/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 104 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked       14/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Thug (Level 2)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Apprentice Thug (Level 3)</div>  <div class="info">Forced pushed a branch with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a> -f</div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -48,18 +49,18 @@ Unlocked       14/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2310 branch
- 148 status
-  50 add
-  42 checkout
+2340 branch
+ 149 status
+  53 add
+  46 checkout
   30 diff
-  23 commit
-  19 rebase
+  25 commit
+  20 rebase
   18 push
   10 log
+   9 fetch
    9 achievements
    8 stash
-   8 fetch
    5 remote
    3 rm
    3 mv
